@@ -1,5 +1,14 @@
 2007-07-11  Milan Zamazal  <pdm@brailcom.org>
 
+	* src/modules/festival.c (module_speak): Use
+	UPDATE_STRING_PARAMETER instead of UPDATE_PARAMETER for updating
+	synthesis_voice.
+
+	* src/modules/module_utils.h (CLEAN_OLD_SETTINGS_TABLE)
+	(INIT_SETTINGS_TABLES): Add synthesis_voice.
+
+2007-07-11  Milan Zamazal  <pdm@brailcom.org>
+	
 	* src/modules/festival_client.c: Use FEST_SET_SYMB instead of
 	FEST_SET_STR for FestivalSetSynthesisVoice.
 
